--- a/egs/digits/README
+++ b/egs/digits/README
@@ -1,4 +1,5 @@
-These files are a audio corpus suitable for use with Wit Zieliński's 
+This is an audio + language model + acoustic data dataset  that is suitable 
+for use with Wit Zieliński's 
 
 CREATING A SIMPLE ASR SYSTEM IN KALDI TOOLKIT FROM 
 SCRATCH USING SMALL DIGITS CORPORA
@@ -6,10 +7,11 @@ IN OTHER WORDS: KALDI FOR DUMMIES
 
 tutorial, as seen at https://groups.google.com/d/msg/kaldi-help/tzyCwt7zgMQ/wvCLpVVpBgAJ
 
-The audio in this corpus was compiled by cutting spoken digits out of English-
-language recitations of pi found on Youtube.*
+I obtained the audio by cutting spoken digits out of English-language recitations 
+of pi found on Youtube.*
 
-This corpus was obtained by following Chapters 5 and 6 in Kaldi for Dummies.  If you
+In addition to the audio, this dataset contains all the langugage model and 
+acoustic data files referenced by Chapters 5 and 6 in Kaldi for Dummies. If you
 want to use it, you must do all the other steps yourself.
 
 It is very nearly exactly as described in the tutorial's Exemplary Project.  There
@@ -24,6 +26,6 @@ are only two changes:
 Using this audio, I've managed to successfully run the tutorial, getting word 
 error rates of 30%ish.
 
-* This corpus isn't super compatible with the Youtube Standard License, 
+* Distribution of this audio isn't super compatible with the Youtube Standard License, 
 which permits streaming only, so if you think about republishing it somewhere, 
 please consider that.
