--- a/egs/tedlium/s5/local/chain/README
+++ b/egs/tedlium/s5/local/chain/README
@@ -1,4 +1,4 @@
-These are instruction to reproduce the TEDLIUM models described in
+These are the instructions to reproduce the TEDLIUM models described in
 "Purely sequence-trained neural networks for ASR based on lattice-free
 MMI", by Povey et al.
 
@@ -12,6 +12,5 @@ Then run:
 
 local/chain/run_tdnn.sh
 
-to see results for a generic chain model (these were not the results
-shown in the paper; the script describes hyperparameter settings
-needed to achieve those results). 
+to see results for a generic chain model. See the script's header
+comments to see other options, and their results.
